# db-training-plan

./: .gitignore  README.md  extract_courses.py  extract_data.py  fix_encoding.py  import_sufe.py  init_db.py  main.py  pyproject.toml  sufe_data.sql
app/: database.py  main.py
data/: structure.txt
data/processed/: courses.csv
docs/: er-diagram.md
